--- a/src/main/groovy/io/appery/apperyunit/DashboardFrame.form
+++ b/src/main/groovy/io/appery/apperyunit/DashboardFrame.form
@@ -116,7 +116,10 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="paramsPanel" max="32767" attributes="0"/>
               </Group>
-              <Component id="buttonPanel" alignment="1" max="32767" attributes="0"/>
+              <Group type="102" alignment="1" attributes="0">
+                  <Component id="buttonPanel" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="130" max="-2" attributes="0"/>
+              </Group>
               <Group type="102" alignment="1" attributes="0">
                   <Component id="scriptNamePanel" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
@@ -253,7 +256,7 @@
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <Component id="jScrollPane4" max="32767" attributes="0"/>
+                      <Component id="jScrollPane4" pref="285" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -309,8 +312,10 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="saveButton" min="-2" pref="107" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
+                      <Component id="logsButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="closeButton" min="-2" pref="107" max="-2" attributes="0"/>
-                      <EmptySpace pref="138" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -324,6 +329,7 @@
                           <Component id="testButton" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="downloadButton" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="saveButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="logsButton" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="closeButton" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
@@ -407,6 +413,15 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="saveButtonActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="logsButton">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Logs"/>
+                <Property name="enabled" type="boolean" value="false"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="logsButtonActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JButton" name="closeButton">
