--- a/src/main/groovy/io/appery/apperyunit/DashboardFrame.form
+++ b/src/main/groovy/io/appery/apperyunit/DashboardFrame.form
@@ -229,6 +229,9 @@
                 <Property name="text" type="java.lang.String" value="Reset"/>
                 <Property name="enabled" type="boolean" value="false"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="resetParamsButtonActionPerformed"/>
+              </Events>
             </Component>
             <Container class="javax.swing.JSplitPane" name="paramsSplitPane">
               <Properties>
@@ -350,9 +353,9 @@
                       <Component id="testButton" min="-2" pref="100" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="downloadButton" min="-2" pref="107" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="closeButton" min="-2" pref="107" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
+                      <Component id="closeButton" min="-2" pref="107" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
